--- a/src/app/products/ortho-news/style.css
+++ b/src/app/products/ortho-news/style.css
@@ -1,4 +1,4 @@
-h5 {
+.ortho-h5 {
   text-align: center;
   background-color: var(--colore-primario);
   margin-bottom: 0 !important;
